@@ -3549,6 +3549,67 @@ rb_file_sysopen(const char *fname, int flags, int mode)
     return rb_file_sysopen_internal(io_alloc(rb_cFile), fname, flags, mode);
 }
 
+VALUE
+rb_openat(int argc, VALUE *argv, int base, const char *path)
+{
+    VALUE fname, vmode, perm, newio;
+    volatile VALUE full;
+    int flags = O_RDONLY, fmode = 0666, fd;
+    const char *fullpath;
+#ifdef AT_FDCWD
+    const char *name;
+#endif
+    rb_io_t *fptr;
+
+    rb_secure(2);
+    rb_scan_args(argc, argv, "12", &fname, &vmode, &perm);
+    FilePathValue(fname);
+
+    if (!NIL_P(vmode)) {
+	if (FIXNUM_P(vmode)) {
+	    flags = FIX2INT(vmode);
+	}
+	else {
+	    SafeStringValue(vmode);
+	    flags = rb_io_mode_modenum(RSTRING_PTR(vmode));
+	}
+    }
+    if (!NIL_P(perm)) {
+	fmode = NUM2INT(perm);
+    }
+    newio = io_alloc(rb_cFile);
+    MakeOpenFile(newio, fptr);
+    fptr->mode = rb_io_modenum_flags(flags);
+#ifdef AT_FDCWD
+    name = RSTRING_PTR(fname);
+#define RB_DO_OPENAT() ((base == -1) ?			\
+			open(fullpath, flags, fmode) :	\
+			openat(base, name, flags, fmode))
+#else
+#define RB_DO_OPENAT() open(fullpath, flags, fmode)
+#endif
+    full = fname = rb_file_expand_path(fname, rb_str_new2(path));
+    RBASIC(fname)->klass = 0;
+    OBJ_FREEZE(fname);
+    fullpath = RSTRING_PTR(fname);
+    if ((fd = RB_DO_OPENAT()) < 0) {
+	if (errno == EMFILE || errno == ENFILE) {
+	    rb_gc();
+	    fd = RB_DO_OPENAT();
+	}
+	if (fd < 0) {
+	    rb_sys_fail(fullpath);
+	}
+    }
+#undef RB_DO_OPENAT
+    fptr->fd = fd;
+    fptr->path = strdup(fullpath);
+    if (rb_block_given_p()) {
+	return rb_ensure(rb_yield, newio, io_close, newio);
+    }
+    return newio;
+}
+
 #if defined(__CYGWIN__) || !defined(HAVE_FORK)
 static struct pipe_list {
     rb_io_t *fptr;
